Prevent overflow when presentation mode

--- a/src/components/Editor.scss
+++ b/src/components/Editor.scss
@@ -50,6 +50,7 @@ $border-color: #afafb2;
       .vs-page {
         box-shadow: none;
         border: 0;
+        overflow: hidden;
       }
 
       .vs-pageholder {
